chore: 完成配置和注册类的 NeoForge 1.21 迁移
核心变更：
- 将 ForgeConfigSpec 迁移到 ModConfigSpec
- 更新 MISCTWFBlocks 和 MISCTWFItems 的注册逻辑以适配 NeoForge API
- 为配置类添加完整的 Javadoc 和类注释
- 添加必要的 SuppressWarnings 注解以抑制 SonarQube 规则警告

技术细节：
- 重构配置定义和验证逻辑以使用 ModConfigSpec
- 更新方块和物品注册以使用 NeoForge 的注册系统
- 保持配置参数和默认值不变，确保向后兼容性

此次提交完成了模组核心配置和注册系统的迁移工作喵~

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>