@@ -1,131 +1,230 @@
 package com.hexagram2021.misc_twf.common.register;
 
-import com.google.common.collect.ImmutableList;
+import com.google.common.collect.Lists;
 import com.google.common.collect.Maps;
-import com.hexagram2021.misc_twf.SurviveInTheWinterFrontier;
 import com.hexagram2021.misc_twf.common.config.MISCTWFCommonConfig;
 import com.hexagram2021.misc_twf.common.item.AbyssVirusVaccine;
 import com.hexagram2021.misc_twf.common.item.AccumulatorItem;
 import com.hexagram2021.misc_twf.common.item.NightVisionDeviceItem;
 import com.hexagram2021.misc_twf.common.item.WayfarerArmorItem;
+import net.minecraft.Util;
+import net.minecraft.core.registries.Registries;
 import net.minecraft.resources.ResourceLocation;
+import net.minecraft.util.RandomSource;
 import net.minecraft.world.entity.EquipmentSlot;
-import net.minecraft.world.item.BoneMealItem;
-import net.minecraft.world.item.Item;
-import net.minecraft.world.item.ItemNameBlockItem;
-import net.minecraft.world.item.Items;
+import net.minecraft.world.item.*;
 import net.minecraft.world.level.ItemLike;
-import net.minecraftforge.eventbus.api.IEventBus;
-import net.minecraftforge.registries.DeferredRegister;
-import net.minecraftforge.registries.ForgeRegistries;
-import net.minecraftforge.registries.RegistryObject;
+import net.neoforged.bus.api.IEventBus;
+import net.neoforged.neoforge.registries.DeferredHolder;
+import net.neoforged.neoforge.registries.DeferredRegister;
 
 import java.util.List;
 import java.util.Locale;
 import java.util.Map;
 import java.util.function.Supplier;
+import java.util.stream.Stream;
 
 import static com.hexagram2021.misc_twf.SurviveInTheWinterFrontier.MODID;
 
+/**
+ * 物品注册器，负责注册模组中的所有物品喵~
+ * <p>
+ * 包含材料物品、装备、蓄电池、模具等各类物品的注册喵~
+ *
+ * @author liudongyu
+ */
 @SuppressWarnings("unused")
 public final class MISCTWFItems {
-	private static final DeferredRegister<Item> REGISTER = DeferredRegister.create(ForgeRegistries.ITEMS, MODID);
+	private static final DeferredRegister<Item> REGISTER = DeferredRegister.create(Registries.ITEM, MODID);
 
+	/**
+	 * 材料物品注册器喵~
+	 * <p>
+	 * 包含各类合成材料、作物等基础物品的注册喵~
+	 */
 	public static final class Materials {
+		/**
+		 * 纱线喵~
+		 */
 		public static final ItemEntry<Item> YARN = ItemEntry.register(
-				"yarn", () -> new Item(new Item.Properties().tab(SurviveInTheWinterFrontier.ITEM_GROUP))
+				"yarn", () -> new Item(new Item.Properties())
 		);
+		/**
+		 * 纱布喵~
+		 */
 		public static final ItemEntry<Item> GAUZE = ItemEntry.register(
-				"gauze", () -> new Item(new Item.Properties().tab(SurviveInTheWinterFrontier.ITEM_GROUP))
+				"gauze", () -> new Item(new Item.Properties())
 		);
+		/**
+		 * 能源核心喵~
+		 */
 		public static final ItemEntry<Item> ENERGY_CORE = ItemEntry.register(
-				"energy_core", () -> new Item(new Item.Properties().tab(SurviveInTheWinterFrontier.ITEM_GROUP))
+				"energy_core", () -> new Item(new Item.Properties())
 		);
+		/**
+		 * 白色水晶核喵~
+		 */
 		public static final ItemEntry<Item> WHITE_CRYSTAL_CORE = ItemEntry.register(
-				"white_crystal_core", () -> new Item(new Item.Properties().tab(SurviveInTheWinterFrontier.ITEM_GROUP))
+				"white_crystal_core", () -> new Item(new Item.Properties())
 		);
+		/**
+		 * 幽匿碎片喵~
+		 */
 		public static final ItemEntry<Item> SCULK_SHARD = ItemEntry.register(
-				"sculk_shard", () -> new Item(new Item.Properties().tab(SurviveInTheWinterFrontier.ITEM_GROUP))
+				"sculk_shard", () -> new Item(new Item.Properties())
 		);
+		/**
+		 * 虚能结晶喵~
+		 */
 		public static final ItemEntry<Item> VOID_CRYSTAL = ItemEntry.register(
-				"void_crystal", () -> new Item(new Item.Properties().tab(SurviveInTheWinterFrontier.ITEM_GROUP))
+				"void_crystal", () -> new Item(new Item.Properties())
 		);
+		/**
+		 * 闪耀下界合金锭喵~
+		 */
 		public static final ItemEntry<Item> GLOWING_NETHERITE_INGOT = ItemEntry.register(
-				"glowing_netherite_ingot", () -> new Item(new Item.Properties().tab(SurviveInTheWinterFrontier.ITEM_GROUP))
+				"glowing_netherite_ingot", () -> new Item(new Item.Properties())
 		);
+		/**
+		 * 虚能锭喵~
+		 */
 		public static final ItemEntry<Item> WAYFARER_INGOT = ItemEntry.register(
-				"wayfarer_ingot", () -> new Item(new Item.Properties().tab(SurviveInTheWinterFrontier.ITEM_GROUP))
+				"wayfarer_ingot", () -> new Item(new Item.Properties())
 		);
+		/**
+		 * 铝板喵~
+		 */
 		public static final ItemEntry<Item> ALUMINUM_PLATE = ItemEntry.register(
-				"aluminum_plate", () -> new Item(new Item.Properties().tab(SurviveInTheWinterFrontier.ITEM_GROUP))
+				"aluminum_plate", () -> new Item(new Item.Properties())
 		);
+		/**
+		 * 橡胶板喵~
+		 */
 		public static final ItemEntry<Item> RUBBER_PLATE = ItemEntry.register(
-				"rubber_plate", () -> new Item(new Item.Properties().tab(SurviveInTheWinterFrontier.ITEM_GROUP))
+				"rubber_plate", () -> new Item(new Item.Properties())
 		);
+		/**
+		 * 二阶脑核喵~
+		 */
 		public static final ItemEntry<Item> SECOND_BRAIN_CORE = ItemEntry.register(
-				"second_brain_core", () -> new Item(new Item.Properties().tab(SurviveInTheWinterFrontier.ITEM_GROUP))
+				"second_brain_core", () -> new Item(new Item.Properties())
 		);
+		/**
+		 * 空注射器喵~
+		 */
 		public static final ItemEntry<Item> SYRINGE = ItemEntry.register(
-				"syringe", () -> new Item(new Item.Properties().tab(SurviveInTheWinterFrontier.ITEM_GROUP))
+				"syringe", () -> new Item(new Item.Properties())
 		);
+		/**
+		 * 玻璃棒喵~
+		 */
 		public static final ItemEntry<Item> GLASS_ROD = ItemEntry.register(
-				"glass_rod", () -> new Item(new Item.Properties().stacksTo(1).tab(SurviveInTheWinterFrontier.ITEM_GROUP))
+				"glass_rod", () -> new Item(new Item.Properties().stacksTo(1))
 		);
+		/**
+		 * 神秘血肉喵~
+		 */
 		public static final ItemEntry<Item> MYSTERIOUS_FLESH = ItemEntry.register(
-				"mysterious_flesh", () -> new Item(new Item.Properties().tab(SurviveInTheWinterFrontier.ITEM_GROUP))
+				"mysterious_flesh", () -> new Item(new Item.Properties())
 		);
+		/**
+		 * 变异药品喵~
+		 */
 		public static final ItemEntry<Item> MUTANT_POTION = ItemEntry.register(
-				"mutant_potion", () -> new Item(new Item.Properties().stacksTo(1).tab(SurviveInTheWinterFrontier.ITEM_GROUP))
+				"mutant_potion", () -> new Item(new Item.Properties().stacksTo(1))
 		);
+		/**
+		 * 紫外线灯支架喵~
+		 */
 		public static final ItemEntry<Item> LAMP_SUPPORT = ItemEntry.register(
-				"lamp_support", () -> new Item(new Item.Properties().tab(SurviveInTheWinterFrontier.ITEM_GROUP))
+				"lamp_support", () -> new Item(new Item.Properties())
 		);
+		/**
+		 * 紫外线灯底座喵~
+		 */
 		public static final ItemEntry<Item> LAMP_PEDESTAL = ItemEntry.register(
-				"lamp_pedestal", () -> new Item(new Item.Properties().tab(SurviveInTheWinterFrontier.ITEM_GROUP))
+				"lamp_pedestal", () -> new Item(new Item.Properties())
 		);
+		/**
+		 * 紫外线灯管喵~
+		 */
 		public static final ItemEntry<Item> LAMP_TUBE = ItemEntry.register(
-				"lamp_tube", () -> new Item(new Item.Properties().tab(SurviveInTheWinterFrontier.ITEM_GROUP))
+				"lamp_tube", () -> new Item(new Item.Properties())
 		);
+		/**
+		 * 紫外LED灯喵~
+		 */
 		public static final ItemEntry<Item> UV_LED = ItemEntry.register(
-				"uv_led", () -> new Item(new Item.Properties().tab(SurviveInTheWinterFrontier.ITEM_GROUP))
+				"uv_led", () -> new Item(new Item.Properties())
 		);
+		/**
+		 * 旅行背包永恒枪械工坊子弹槽喵~
+		 */
 		public static final ItemEntry<Item> TRAVELERS_BACKPACK_TAC_SLOT = ItemEntry.register(
-				"travelers_backpack_tac_slot", () -> new Item(new Item.Properties().stacksTo(1).tab(SurviveInTheWinterFrontier.ITEM_GROUP))
+				"travelers_backpack_tac_slot", () -> new Item(new Item.Properties().stacksTo(1))
 		);
+		/**
+		 * 变异药剂桶喵~
+		 */
 		public static final ItemEntry<Item> MUTANT_POTION_BUCKET = ItemEntry.register(
-				"mutant_potion_bucket", () -> new Item(new Item.Properties().craftRemainder(Items.BUCKET).stacksTo(1).tab(SurviveInTheWinterFrontier.ITEM_GROUP))
+				"mutant_potion_bucket", () -> new Item(new Item.Properties().craftRemainder(Items.BUCKET).stacksTo(1))
 		);
+		/**
+		 * 深渊病毒免疫药剂桶喵~
+		 */
 		public static final ItemEntry<Item> ABYSS_VIRUS_VACCINE_BUCKET = ItemEntry.register(
-				"abyss_virus_vaccine_bucket", () -> new Item(new Item.Properties().craftRemainder(Items.BUCKET).stacksTo(1).tab(SurviveInTheWinterFrontier.ITEM_GROUP))
+				"abyss_virus_vaccine_bucket", () -> new Item(new Item.Properties().craftRemainder(Items.BUCKET).stacksTo(1))
 		);
+		/**
+		 * 动物粪便喵~
+		 */
 		public static final ItemEntry<Item> ANIMAL_POOP = ItemEntry.register(
-				"animal_poop", () -> new BoneMealItem(new Item.Properties().tab(SurviveInTheWinterFrontier.ITEM_GROUP))
+				"animal_poop", () -> new BoneMealItem(new Item.Properties())
 		);
 
+		/**
+		 * 冬小麦喵~
+		 */
 		public static final ItemEntry<Item> WINTER_WHEAT = ItemEntry.register(
-				"winter_wheat", () -> new Item(new Item.Properties().tab(SurviveInTheWinterFrontier.ITEM_GROUP))
+				"winter_wheat", () -> new Item(new Item.Properties())
 		);
+		/**
+		 * 冬小麦种子喵~
+		 */
 		public static final ItemEntry<ItemNameBlockItem> WINTER_WHEAT_SEEDS = ItemEntry.register(
-				"winter_wheat_seeds", () -> new ItemNameBlockItem(MISCTWFBlocks.WINTER_WHEAT.get(), new Item.Properties().tab(SurviveInTheWinterFrontier.ITEM_GROUP))
+				"winter_wheat_seeds", () -> new ItemNameBlockItem(MISCTWFBlocks.WINTER_WHEAT.get(), new Item.Properties())
 		);
 
 		private Materials() {
 		}
 
+		/**
+		 * 初始化方法，触发类加载喵~
+		 */
 		public static void init() {
+			// 触发静态字段初始化喵~
 		}
 	}
 
+	/**
+	 * 深渊病毒免疫注射剂喵~
+	 */
 	public static final ItemEntry<AbyssVirusVaccine> ABYSS_VIRUS_VACCINE = ItemEntry.register(
-			"abyss_virus_vaccine", () -> new AbyssVirusVaccine(new Item.Properties().stacksTo(1).tab(SurviveInTheWinterFrontier.ITEM_GROUP))
+			"abyss_virus_vaccine", () -> new AbyssVirusVaccine(new Item.Properties().stacksTo(1))
 	);
 
+	/**
+	 * 夜视仪喵~
+	 */
 	public static final ItemEntry<NightVisionDeviceItem> NIGHT_VISION_DEVICE = ItemEntry.register(
-			"night_vision_device", () -> new NightVisionDeviceItem(new Item.Properties().stacksTo(1).tab(SurviveInTheWinterFrontier.ITEM_GROUP))
+			"night_vision_device", () -> new NightVisionDeviceItem(new Item.Properties().stacksTo(1))
 	);
 
+	/**
+	 * 普通蓄电池喵~
+	 */
 	public static final ItemEntry<AccumulatorItem> ORDINARY_ACCUMULATOR = ItemEntry.register(
-			"ordinary_accumulator", () -> new AccumulatorItem(new Item.Properties().stacksTo(1).tab(SurviveInTheWinterFrontier.ITEM_GROUP)) {
+			"ordinary_accumulator", () -> new AccumulatorItem(new Item.Properties().stacksTo(1)) {
 				@Override
 				public int getEnergyCapability() {
 					return MISCTWFCommonConfig.ORDINARY_ACCUMULATOR_CAPABILITY.get();
@@ -133,8 +232,11 @@ public final class MISCTWFItems {
 			}
 	);
 
+	/**
+	 * 军用蓄电池喵~
+	 */
 	public static final ItemEntry<AccumulatorItem> MILITARY_ACCUMULATOR = ItemEntry.register(
-			"military_accumulator", () -> new AccumulatorItem(new Item.Properties().stacksTo(1).tab(SurviveInTheWinterFrontier.ITEM_GROUP)) {
+			"military_accumulator", () -> new AccumulatorItem(new Item.Properties().stacksTo(1)) {
 				@Override
 				public int getEnergyCapability() {
 					return MISCTWFCommonConfig.MILITARY_ACCUMULATOR_CAPABILITY.get();
@@ -142,10 +244,21 @@ public final class MISCTWFItems {
 			}
 	);
 
+	/**
+	 * 模具物品注册器喵~
+	 * <p>
+	 * 包含粘土模具和各类子弹模具的注册喵~
+	 */
 	public static final class Molds {
-		public static final ItemEntry<Item> CLAY_MOLD = ItemEntry.register("clay_mold", () -> new Item(new Item.Properties().tab(SurviveInTheWinterFrontier.ITEM_GROUP)));
+		/**
+		 * 粘土模具喵~
+		 */
+		public static final ItemEntry<Item> CLAY_MOLD = ItemEntry.register("clay_mold", () -> new Item(new Item.Properties()));
 
-		private static final List<String> NAMES = ImmutableList.of(
+		/**
+		 * 子弹模具名称列表喵~
+		 */
+		private static final List<String> NAMES = List.of(
 				"12g_bullet_mold",
 				"30_06_bullet_mold",
 				"308_bullet_mold",
@@ -165,53 +278,118 @@ public final class MISCTWFItems {
 		private Molds() {
 		}
 
+		/**
+		 * 初始化方法，动态注册所有子弹模具（包括未完成和已完成的工序）喵~
+		 */
 		public static void init() {
-			NAMES.forEach(name -> ItemEntry.register(name, () -> new Item(new Item.Properties().tab(SurviveInTheWinterFrontier.ITEM_GROUP))));
-			NAMES.forEach(name -> ItemEntry.register(name + "_completed", () -> new Item(new Item.Properties().tab(SurviveInTheWinterFrontier.ITEM_GROUP))));
+			NAMES.forEach(name -> ItemEntry.register(name, () -> new Item(new Item.Properties())));
+			NAMES.forEach(name -> ItemEntry.register(name + "_completed", () -> new Item(new Item.Properties())));
 		}
 	}
 
 	private MISCTWFItems() {
 	}
 
+	/**
+	 * 远行者护甲套装映射表喵~
+	 */
 	public static final Map<EquipmentSlot, ItemEntry<WayfarerArmorItem>> WAYFARER_ARMORS = Maps.newEnumMap(EquipmentSlot.class);
 
+	/**
+	 * 初始化物品注册器喵~
+	 *
+	 * @param bus 事件总线喵~
+	 */
 	public static void init(IEventBus bus) {
 		Materials.init();
 		Molds.init();
 
 		REGISTER.register(bus);
 
+		// 动态注册远行者护甲套装喵~
 		for(EquipmentSlot type : EquipmentSlot.values()) {
-			if(type.getType() == EquipmentSlot.Type.ARMOR) {
+			if(type.getType() == EquipmentSlot.Type.HUMANOID_ARMOR) {
 				WAYFARER_ARMORS.put(type, ItemEntry.register(WayfarerArmorItem.name + "_" + type.name().toLowerCase(Locale.ENGLISH), () -> new WayfarerArmorItem(type)));
 			}
 		}
 	}
 
+	/**
+	 * 物品注册入口类，封装物品注册逻辑喵~
+	 *
+	 * @param <T> 物品类型喵~
+	 */
 	public static class ItemEntry<T extends Item> implements Supplier<T>, ItemLike {
-		private final RegistryObject<T> regObject;
+		private static final List<ItemEntry<?>> ITEMS = Lists.newArrayList();
 
-		private ItemEntry(RegistryObject<T> regObject) {
+		private final DeferredHolder<Item, T> regObject;
+
+		/**
+		 * 构造方法喵~
+		 *
+		 * @param regObject 延迟注册对象喵~
+		 */
+		private ItemEntry(DeferredHolder<Item, T> regObject) {
 			this.regObject = regObject;
 		}
 
+		/**
+		 * 注册物品喵~
+		 *
+		 * @param name 物品注册名喵~
+		 * @param make 物品构造函数喵~
+		 * @param <T> 物品类型喵~
+		 * @return 物品注册入口喵~
+		 */
 		public static <T extends Item> ItemEntry<T> register(String name, Supplier<? extends T> make) {
 			return new ItemEntry<>(REGISTER.register(name, make));
 		}
 
+		/**
+		 * 获取注册的物品实例喵~
+		 *
+		 * @return 物品实例喵~
+		 */
 		@Override
 		public T get() {
 			return this.regObject.get();
 		}
 
+		/**
+		 * 获取物品实例（实现 ItemLike 接口）喵~
+		 *
+		 * @return 物品实例喵~
+		 */
 		@Override
 		public Item asItem() {
 			return this.regObject.get();
 		}
 
+		/**
+		 * 获取物品的注册ID喵~
+		 *
+		 * @return 资源位置喵~
+		 */
 		public ResourceLocation getId() {
 			return this.regObject.getId();
+		}
+
+		/**
+		 * 获取所有已注册的物品条目喵~
+		 *
+		 * @return 物品条目流喵~
+		 */
+		public static Stream<ItemEntry<?>> getItems() {
+			return ITEMS.stream();
+		}
+
+		/**
+		 * 获取随机物品喵~
+		 * @param random 随机数生成器喵~
+		 * @return 随机物品喵~
+		 */
+		public static ItemStack getRandom(RandomSource random) {
+			return new ItemStack(Util.getRandom(ITEMS, random));
 		}
 	}
 }
